2008-11-01    <neal@bcn.boulder.co.us>

	* README (C): 
	Improve installation and use instructions in README
	Version 0.9.dev-r47

2008-10-30    <neal@bcn.boulder.co.us>

	* electionaudits/views.py (parse): 
	New /parse/ form to parse incoming directory with -s -c
	
	* electionaudits/templates/electionaudits/stats.html: 
	Call Ad-Hoc Contest Statistics a "Calculator" and fix title
	
2008-10-30    <neal@bcn.boulder.co.us>
	
	* README (C): 
	Document new -c and directory options in README

2008-10-29    <neal@bcn.boulder.co.us>

	* electionaudits/parsers.py (parse): 
	if a directory arg is given to parse, parse each file in the directory
	implement --chronological option and change -c to be that, not --contest
	
2008-10-23    <neal@bcn.boulder.co.us>

	* README (Features): 
	Release Version 0.8
	Highlight the features of ElectionAudits
	Update ToDo
	
2008-10-22    <neal@bcn.boulder.co.us>

	* electionaudits/views.py (StatsForm): 
	New ad-hoc /stats/ form: statistics for a given margin, confidence

	* electionaudits/varsize.py (rule_of_thumb): 
	Call rule_of_thumb from paper() for consistency
	Bug: needed "s" parameter to bmin() call for SAFE
	
	* electionaudits/parsers.py (parse_csv): 
	introduce --batchid option for distinguishing data from different files

	* electionaudits/models.py (Contest.selection_stats): 
	Cache selection_stats varsize results for speed
	Include prose form of stats in audit report
	
2008-10-21    <neal@bcn.boulder.co.us>

	* electionaudits/varsize.py (bmin): 
	Handle infinities with margin of 0 votes and problems with large margins
	Eliminate scipy requirement for electionaudits: only import where needed
	
	* electionaudits/parsers.py (parse_csv): 
	use -e option as election name for csv also

2008-10-20    <neal@bcn.boulder.co.us>

	* electionaudits/parsers.py (main): 
	Rename makeauditunits to electionaudits/parsers.py
	Make it easier to use, via a new manage.py "parse" command:
	   electionaudits/management/commands/parse.py