@@ -24,7 +24,7 @@ A. Aslam, Raluca A. Popa and Ronald L. Rivest</a></p>
 </form>
 
 <p>Using a fixed set of audit units for now:
-100 of size 500, 200 of size 200, 200 of size 10.</p>
+300 of size 500, 200 of size 200, 100 of size 40.</p>
 
 {% if stats %}
 <hr/>
